[tool.poetry]
name = "nomad"
version = "0.1.0"
description = ""
authors = ["Goutham Pratapa <pratapagoutham@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.0"
black = "^21.7b0"
requests = "^2.26.0"
"oslo.log" = "^4.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
